2011-02-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/CMakeLists.txt: Removed some testing stuff that
	accidently was comitted.

2011-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (gsad_init, main): Replace GSA_STATE_DIR by GSA_DATA_DIR.

	* src/CMakeLists.txt: Replace GSA_STATE_DIR by GSA_DATA_DIR.

	* CMakeLists.txt: Replace GSA_STATE_DIR by GSA_DATA_DIR.

2011-02-05  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (save_note_omp): Remove premature openvas_server_close.

2011-02-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (scanconfig_details.html): Replace name in get_config
	URL with ID.

2011-02-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version number.

	* src/html/help.xsl: Updated version number.

2011-02-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 2.0+rc3 release.

	* CHANGES: Updated.

2011-02-04  Michael Wiegand <michael.wiegand@greenbone.net>

	* README: Fix typo, strip now redundant part from example.

2011-02-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Add man page to gsad.

	* doc/gsad.8.xml: New. Source file for the gsad man page.

	* doc/gsad.8: New. Pregenerated man page as troff document.

	* doc/gsad.html: New. Pregenerated man page as HTML document.

	* doc/CMakeLists.txt: Add support for man page generation and
	installation.

	* CMakeLists.txt: Define DATADIR.

	* INSTALL: Updated prerequisites.

2011-02-03  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (login_page): Turn off autocomplete on input fields,
	to prevent some of the password completion performed by some browsers.

2011-02-03  Matthew Mundell <matthew.mundell@greenbone.net>

	Replace HTTP Basic Auth based session management with token based
	session management.  In the process close the cross site request
	forgery hole that affected every URL.
