@@ -1,3 +1,10 @@
+2011-02-08  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/gsad_omp.c (get_config_omp): Always get the NVT families.
+
+	* src/html/omp.xsl (config [families]): Show the total number of NVTs too,
+	counting from NVT families list.
+
 2011-02-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/CMakeLists.txt: Removed some testing stuff that
